--- a/Example/LapsDC.html
+++ b/Example/LapsDC.html
@@ -49,7 +49,7 @@ function toggleVisibility(id) {
   </div>
   <div style="text-align: right; font-size: 13px; color: #666;">
     <div style="padding: 4px 8px; border-radius: 4px; display: inline-block;">
-      Report date : 01/20/2026 23:58:01
+      Report date : 01/21/2026 00:07:11
     </div>
   </div>
 </div>
@@ -108,7 +108,7 @@ function toggleVisibility(id) {
 
     <hr style="margin-top: 40px; border-top: 1px solid #ccc;" />
     <div style="font-size: 12px; color: #888; text-align: center; padding-top: 10px; padding-bottom: 30px;">
-    Developed by <strong>Dakhama Mehdi</strong> &amp; <strong>Alain Cuisner</strong> – <a href="https://github.com/dakhama-mehdi" target="_blank">GitHub</a><br />
+    Developed by <strong>Dakhama Mehdi</strong> &amp; <strong>Alain Cuisner</strong> – <a href="https://github.com/dakhama-mehdi/LAPS-Delegation-Audit" target="_blank">GitHub</a><br />
     Special thanks to <a href="https://www.it-connect.fr/" target="_blank">IT-Connect</a> for their valuable resources and community support.
     </div>
 
